[package]
name = "dx-analyser"
version = "0.1.2"
authors = ["hendrik@dd5ht.de"]
autobins = false

[dependencies]
clap = "*"
toml = "*"
csv = "*"
serde = "*"
serde_derive = "*"
dirs = "*"
regex = "*"

[profile.release]
lto = false

[lib]
name = "dxtracker"
path = "src/lib.rs"

[[bin]]
name = "dxtool"
path = "src/bin.rs"